tests/errors/list_find_non_null_result.dang
let found: Int! = [1, 2, 3].find { x => x > 1 }
